@@ -1,21 +1,24 @@
-package chapter02;
+package chapter02.movie.step01;
 
+import chapter02.money.Money;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public abstract class DiscountPolicy {
+    private List<DiscountCondition> conditions = new ArrayList<>();
 
-    private List<DiscountCondition> conditions;
-
-    public DiscountPolicy(DiscountCondition... conditions) {
-        this.conditions = List.of(conditions);
+    public DiscountPolicy(DiscountCondition ... conditions) {
+        this.conditions = Arrays.asList(conditions);
     }
 
     public Money calculateDiscountAmount(Screening screening) {
-        for (DiscountCondition each : conditions) {
+        for(DiscountCondition each : conditions) {
             if (each.isSatisfiedBy(screening)) {
                 return getDiscountAmount(screening);
             }
         }
+
         return Money.ZERO;
     }
 
